--- a/pages/圆锥投影.md
+++ b/pages/圆锥投影.md
@@ -65,6 +65,59 @@ public:: true
 	  等距圆锥图，中心子午线95度。给定限制纬线70度和40度，欧拉约束将圆锥常数设置为0.810。
 	- ![image.png](../assets/image_1624796848565_0.png) 
 	  等距圆锥图，标准平行线62°N和47°N，在Kavraiskiy之后。中央经线95°E，圆锥常数0.812。
-## 兰伯特和阿尔伯特的等面积圆锥投影
-- 在其他几个主题中，约翰-兰伯特（Johann Lambert）1772年的大量专著考虑了当经线被表示为由一个非真实的恒定角度分开的直线时--如方位角投影--但不像圆柱形投影那样平行时会发生什么：其结果可以顺便包裹在一个圆锥体上。兰伯特出生在阿尔萨斯（当时是瑞士的一部分），他应用微积分解决了以90°N或90°S作为标准平行线来保持区域关系的保真度的情况--即。由此产生的建议，即他的圆锥等面积，或兰伯特的等球面stenoteric（Adrien Germain和O.S.Adams使用的名称，可能是因为它在缩小子午线间距的同时保留了球体的面积）投影，后来被阿尔贝斯概括。
--
+## Lambert和Albers的等面积圆锥投影
+- 在其他几个主题中，约翰-兰伯特（Johann Lambert）1772年的大量专著考虑了当经线被表示为由一个非真实的恒定角度分开的直线时--如方位角投影--但不像圆柱形投影那样平行时会发生什么：其结果可以顺便包裹在一个圆锥体上。兰伯特出生在阿尔萨斯（当时是瑞士的一部分），应用微积分来解决以90 N或90 S作为标准纬线来保持区域关系的保真度的情况——即一个极点是一个点，而圆锥在顶点结束。由此产生的建议，即他的圆锥等面积，由此产生的方案，他的圆锥等积投影，或兰伯特的等球狭窄投影(阿德里安·杰曼和奥·斯·亚当斯使用的名称，可能是因为它在缩小子午线间距的同时保留了球体的面积)，后来被Albers推广。
+- 兰伯特的论文用一张欧洲的小地图进行了说明，他推测北纬30°到70°的范围就足够了，第二个标准纬线，没有形状失真，可以放置在北纬50°左右。为了更容易计算，选择了7/8的圆锥常数，确定实际标准纬度为北纬48° 35′25″，在巴黎和慕尼黑之间。另一个简单的选择是0，它产生一个半圆形的世界地图。
+- 对于整个世界的等面积圆锥图，Oscar S.Adams（1945）建议将90°N和18°25′S作为标准纬线，以尽量减少北极和南纬50°平行线之间的形状失真，认为这是人类的重要区域。然而，他更倾向于采用两个半球的横向断续版本。
+- 德国人Heinrich C.Albers在1805年发表了他的圆锥等面积投影，作为Lambert圆锥投影的一般情况，有一条或两条标准平行线，不一定在一个极上。如果标准平行线与赤道等距，或与赤道重合，则该设计退化为朗伯的等面积圆柱形投影，或其重新缩放的变体之一。
+- 人们对Albers了解不多，在很长一段时间内，他的设计很少受到制图文献的关注；直到最近，它才成为美国政府机构和其他地方的等面积（即通常是小比例尺和统计）地图的常见选择。一个有影响力的支持者是亚当斯，他为椭圆体的情况制定了最小化变形的标准和方程式（约1927年）。
+	- ![image.png](../assets/image_1624797387935_0.png) 
+	  ![image.png](../assets/image_1624797393757_0.png) 
+	  两幅面积相等的圆锥地图，圆锥常数为0.707；第一张是兰伯特投影，标准纬线90°N和24°28′11″N；第二张是阿尔伯斯投影，标准纬线45°N。
+	- ![image.png](../assets/image_1624797508096_0.png) 
+	  近似(基本标准纬度是正确的，但是中央子午线是近似的，因为兰伯特的坐标网格使用了除格林威治以外的参考子午线)兰伯特的欧洲地图的重建，使用了7/8常数的等面积圆锥投影。
+	- ![image.png](../assets/image_1624797540155_0.png) 
+	  适用于整个世界的兰伯特等面积圆锥投影，标准纬线为北纬90度，南纬18度25分，中央经线为东经10度
+	- ## 兰伯特共形圆锥投影
+	- 在1772年的同一专著中，兰伯特在极地方位立体投影和赤道墨卡托投影之间架起了桥梁，再次使用微积分，这次是为了确保角度得到局部保留。为球体和椭球体情况开发的圆锥保形投影，也被称为圆锥共形投影，今天是兰伯特所有原始建议中最重要和最常用的，可与横向墨卡托相比。他用一张欧洲的小地图来说明，选择的极限和标准平行线与等面积版本相同；在保角情况下，圆锥常数是3/4而不是7/8。立体图和墨卡托的是共形圆锥的极限情况，分别是当一个极点是单一的标准纬度和两个标准平行线都围绕赤道对称时（如果不重合，则有适当的重新缩放）。
+	- 令人惊讶的是，这种投影几乎没有得到实际应用，其真正的作者身份几乎没有得到承认，直到第一次世界大战，它被法国作战地图所采用（不要与1918年的法国军用Système Lambert相混淆，这是一种基于Tissot的非正交、非等效最小误差投影的网格标准），也被美国USGS所采用。显然，它是由Charles L.Harding在球面情况下独立开发的，并在1808年至1822年应用于星图册。伟大的数学家J.Carl F.Gauss--他本人是保角制图领域的重要贡献者，也是基本定理的作者，该定理意味着没有一个平面地图可以不失真地表示一个球体--承认Harding的工作，但不承认Lambert。约翰-赫歇尔重新发明了兰伯特的球形方程，并提出了一个具有圆锥常数1/3的世界地图（1859年）；他还提出了选择标准平行线的标准，以减少全球尺度的变化。乔治-布尔，现代数字计算机逻辑的先驱，将赫歇尔的方程扩展到椭圆体上（约1860年）。哈丁、高斯、赫歇尔被不同程度地认为是投影的创造者，甚至在像托马斯-克雷格（1882）这样的专业论文中也是如此。
+		- **面积与角度失真**
+		- ![image.png](../assets/image_1624797860853_0.png) ![image.png](../assets/image_1624798005017_0.png) 
+		  ![image.png](../assets/image_1624798010226_0.png){:height 247, :width 229} ![image.png](../assets/image_1624798016571_0.png) 
+		  变形椭圆可以比较用Albers的等面积（上）和Lambert的保角（下）圆锥投影法绘制的澳大利亚地图的变形。沿着绿色标准纬线的点——15° S和35 S(左)和25 S(右)——没有失真，无论是面积还是角度。注意在等面积圆锥投影中，形状变形的方向是如何在标准纬线和其他地方正交的；请注意，在共形圆锥投影的纬线和其他地方之间，面失真是如何从压缩变为膨胀的。
+		- ![image.png](../assets/image_1624798085555_0.png) 
+		  适用于欧洲的兰伯特共形圆锥投影的近似重建。标准纬线是精确的，但是兰伯特的本初子午线不是基于格林威治的。
+	- 像通常的等角投影一样，兰伯特圆锥投影在大比例尺地形测绘中使用更好；不间断的世界地图呈现的比例范围太大。它可以由一条或两条标准纬线构成；几乎在每一点上，由于一致性，刻度在每个方向上都是一致的，在标准纬线之间不太真实，在其他地方更大；只有标准纬线没有任何扭曲。共形性在两极都失效:围绕一个，所有子午线角度之和小于360°，而另一个位于无穷远处。
+		- ![image.png](../assets/image_1624798194951_0.png){:height 460, :width 470}
+		- 兰伯特的共形圆锥投影应用于世界地图，圆锥常数为赫歇尔建议的1/3。在任何地方都是共形的，除了北极(子午线间距之和为120°而不是360°)和南极，南极无法显示。大尺度畸变在可见极点附近和与之相对的(任意剪裁的)半球是明显的。
+	- 最近，共形圆锥投影已经成为许多官方制图机构的标准；在美国地质勘探局，它取代了美洲多圆锥投影。它也是双极斜圆锥投影的基础，是两个圆形扇面的复合体，使用的是以美洲为中心的斜投影；在每个扇面中，原始纬线大致与大陆 "新月 "对齐：在北美洲向东北方向凹陷，在南方向西南方向凹陷。尽管两条标准纬线被巧妙地选择为精确连接，但横跨中美洲和加勒比海的一条狭窄的折衷带是不符合要求的。双极斜圆锥地图发表于1941年，是其他几项工作的基础，由奥斯本-米勒和威廉-布里塞米斯特开发；虽然发布了几张，但相对较小的比例意味着只需要球形方程。
+	- # 多圆锥投影
+	- ## 介绍
+	- 制图师将多圆锥这个名称应用于：
+	  * 与F.R.Hassler有关的一种特殊地图投影，也称为美国多锥体投影
+	  * 从Hassler的投影中衍生出来的一些投影，都是受堆叠的、重叠的圆锥体的启发；它们包括矩形多锥体
+	  * 一类更普遍的投影，在法线上有非中心的圆形平行线。
+	- 后一组作品相当杂乱，包括许多除了名字之外与圆锥体几乎没有任何关系的设计。它们包括麦考、金兹堡和萨尔曼诺娃的作品。一些作者扩展了这一定义，将艾托夫投影和哈默投影等非圆形纬线也包括在内。
+		- ### 从等距圆锥曲线到美国多圆锥曲线
+		- ![image.png](../assets/image_1624798718121_0.png) ![image.png](../assets/image_1624798723557_0.png) ![image.png](../assets/image_1624798727772_0.png) ![image.png](../assets/image_1624798733596_0.png)
+		- 用一系列的圆锥投影或地壳映射成堆叠的圆锥地图，有助于直观地理解多圆锥的概念，每个圆锥体的标准纬线都与纬度范围最匹配。当果壳的数量增长到无穷大时，每个扇形都瘦成一缕，结果接近于一个连续的多锥图，由于许多缺口必须在外围填补，很明显比例失真在增长。然而，如果使用等距圆锥扇形，则沿任何纬线都没有距离失真，沿中央子午线也完全没有。
+	- ## （美国）多圆锥投影
+	- ![image.png](../assets/image_1624798862746_0.png) 
+	  普通的多圆锥投影通常应用于局部或区域地图，而不是世界地图。
+	- 在普通的圆锥投影中，只有一条或两条纬线——在真正的透视投影中圆锥和球面重合——是具有正确比例的标准线。然而，地图可以沿着纬线分成几个带，每个带适合不同的圆锥；这类似于多圆柱概念。圆锥常数从两极的1变为赤道的0，因此条带不会接触，除非沿着中央子午线。当使用无限多个圆锥时，每个圆锥最佳地与包含单一平行的薄带相切，间隙消失；如果基础投影是等距二次曲线，则中央子午线具有恒定的正确比例，现在连续的结果是经典的或普通的多圆锥投影，也称为美国多圆锥投影。
+	- 瑞士人Ferdinand R. Hassler被认为设计了美国多锥体投影（约1820年），当时他领导的政府机构在其大部分历史时期被称为美国海岸和大地测量局--今天的国家大地测量局，隶属于国家海洋和大气管理局。直到1920年左右，大多数官方大比例尺地图都采用了椭圆的形式，并被其他一些国家和官方机构采用。
+	- 经典的多圆锥投影有圆形的纬线（除了赤道），都有恒定和正确的比例，但不是同心的。每条纬线的曲率与在其纬度处相切的圆锥体上的对应线相同。同样的比例适用于笔直的中央经线；所有其他经线都是弯曲的。这种投影既不是等面积的，也不是等角的，它更适合于地方或区域地图。与等面积圆锥投影和等角圆锥投影相比，它的主要缺点是比例尺变化范围更广，在美国的机构中，这些投影和横轴墨卡托基本上都取代了它。
+		- ![image.png](../assets/image_1624799060271_0.png) 
+		  将复合等距圆锥图叠加在多圆锥图上，说明了它们之间的密切关系。
+		- ![image.png](../assets/image_1624799078839_0.png) ![image.png](../assets/image_1624799083106_0.png) 
+		  移动多圆锥的中央直线子午线类似于重新安排等距圆锥体的切点。这种概括更像是一种新事物，也许在横轴时更有用。
+	- ## 矩形(作战办公室)多圆锥投影
+	- 同样是在美国海岸和大地测量局开发的（1853年），哈斯勒投影最著名的修改版被英国陆军部广泛用于大规模制图，因此它的通用名称是。它也被称为矩形多圆锥投影，原因是格网角度，而不是整体地图形状。
+	- 在矩形多圆锥投影中，纬线是圆弧，同样沿直线中央子午线等距排列。然而，它们的尺度不是恒定的，为了使每条子午线以直角穿过每条纬线而改变。这不是符合性的充分条件，结果也不等同。此外，只有赤道（常见情况）或围绕赤道对称的两条纬线有真正的长度。
+	- 矩形多圆锥投影的用法类似于经典多圆锥投影；事实上，对于小区域来说，它们几乎无法区分。
+	- ![image.png](../assets/image_1624799333337_0.png) ![image.png](../assets/image_1624799347615_0.png) 
+	  带有变形椭圆的北美普通和矩形多圆锥地图。
+	- ## 改进的多圆锥投影
+	- 查尔斯-拉勒芒对经典的多圆锥投影进行了修改，用于《国际世界地图》系列，这是一套1 : 1000000比例尺的独立图幅（该项目也被称为百万地图或世界百万分之一地图），具有标准化的符号和命名法。最初是基于1913年左右的英国地形测量局，后来由联合国维护。必须克服相当多的困难，因为每个国家最初都应该提供自己的地图；实际上，许多国家既没有资源，也没有专业知识来进行自己的地理调查。1980年左右，该项目似乎变得停滞不前，实际出版的地图不到计划中的一半。然而，图幅的索引系统今天仍在其他项目中使用。
+	- 在拉勒芒正式采用的投影中，每张地图由一个四边形组成，由两条相隔4°的平行线为界，均为标准线。所有纬线都是非中心圆弧，其曲率与经典的多面体的曲率相同。然而，子午线是直线，但不汇聚于一点。在赤道附近，边界经线的间距为6°，与中心相距2°的两条是标准线。四边形的宽度在60°N以北和60°S以南变为12°，在76°纬度之后又变为24°。
+	- 由于选择了标准纬线和直经线，任何一对相邻的地图都可以无缝隙地连接起来；但是，如果地图同时在一个以上的方向上连接，则无法避免出现缝隙。像普通的和矩形的多面体一样，该投影既不是保形的也不是等面积的。
