--- a/pages/前言.md
+++ b/pages/前言.md
@@ -2,7 +2,7 @@ public:: true
 
 ## 关于翻译
 - 地图投影是个很复杂的东西,网上和书本上能讲清楚的不多,这块涉及到很多数学原理和制图相关知识,枯燥而且繁复.以前网络上有一个很好的教程,即 [MapProjection](http://www.progonos.com/furuti/index.html),作者是 Carlos A. Furuti,图文并茂,特别详细,但是从19年开始网站没有维护,已经无法访问了,我最近从 archive.org 上把老版本的介绍下载了下来,准备进行翻译和整理,实际也就是先机翻在改改,肯定会有部分偏差和翻译错误,全文是第一人称,翻译中没有做修改 ,翻译在[[地图投影介绍]] 中
-- 其实这套投影教程的内容比较混杂,但是示例图多,显示的清楚,毕竟一图胜千言
+- 其实这套投影教程的内容比较混杂,但是示例图多,显示的清楚,毕竟一图胜千言，里面包括了投影的基础知识，投影推导方式，大部分投影组的历史，很多有趣的地图。
 - 机翻用DeepL和搜狗,虽然DeepL吹的很厉害,但是大部分时候搜狗翻译的更通顺些,可能是专有名词多吧
 - 如果只是想了解各种世界地图,可以参考[世界地图投影](http://michaelminn.net/tutorials/gis-projections-world/)  ,如果想了解投影基础概念,可以看一下 [这篇介绍](http://michaelminn.net/tutorials/gis-projections/index.html)
 - 本篇中主要还是介绍地图投影的整体知识,椭球,水准面,参心坐标系,地心坐标系,黄道赤道,时间标准等其他内容将会慢慢补充,实际主要是以兴趣为主,与干活相关的内容比较少
@@ -14,3 +14,4 @@ public:: true
 ## 关于软件选择
 - 本来还是准备Sphinx那套弄,[GDAL文档](https://headfirst-gdal.readthedocs.io)就是这样写的,优点是排版好看,而且可以导出pdf方便阅读,但是这套里的图片太多,跳转链接也多,shpinx手写插入图片和链接实在太麻烦了,也考虑过用dokuwiki来写,用wiki的话跟原有的混在一起不太好区分原作者,就用的现在这套,[logseq](https://logseq.com),可以直接粘贴图片,而且引用连接方便,方便后期修改
 - 缺点是排版不好看,第二是logseq开发太快,不稳定,如果要用,一定要记得随时提交,或者直接在网站上连github的库,随时提交,丢过两次数据,出现过一次乱码,不过有提交记录问题不大,现在满足我一切需求,现在懒得折腾,先这样吧
+- 试着折腾了下TriliumNote，本机是好东西，也稳定，但是导出来太难看了，懒得自己折腾css，就算了，如果能导出pdf和它自己内部链接的话就好了，就当本地笔记了，数据库，还比较好操作，也确实比logseq多很多东西，除了图片没这么方便，其他真的都更好用。
