--- a/pages/简单的地图背景知识介绍.md
+++ b/pages/简单的地图背景知识介绍.md
@@ -1,14 +1,13 @@
 public:: true
-下一页:: [[制图学基础知识和投影选择]] 
+下一页:: [[制图学基础知识和投影选择]]
 上一页:: [[地图投影介绍]]
 原文链接:: [Introduction](https://web.archive.org/web/20180227085810/http://www.progonos.com/furuti/MapProj/Normal/CartIntro/cartIntro.html)
 
 - 一个广义横向多锥形投影的渲染
    ![image.png](assets/image_1623304504434_0.png)
 ### 有趣的地图投影
-- 地图投影是从地球表面到平面的系统转换（也称为映射）。因为有一些有趣的或有用的属性特征需要被满足,所以我们设计出了很多不同的投影。例如，最好尽可能保持形状、距离和面积关系。不幸的是，没有也永远不会有完美的投影：每种投影的部分区域都会存在一定的变形。 
-  
-  因此，制图学是一门用于设计和选择最合适的投影的艺术和科学。
+- 地图投影是从地球表面到平面的系统转换（也称为映射）。因为有一些有趣的或有用的属性特征需要被满足,所以我们设计出了很多不同的投影。例如，最好尽可能保持形状、距离和面积关系。不幸的是，没有也永远不会有完美的投影：每种投影的部分区域都会存在一定的变形。
+- 因此，制图学是一门用于设计和选择最合适的投影的艺术和科学。
 ### 我的投影
 - 我一直喜欢世界地图，想知道如何用计算机绘制地图。我花了很多时间推算了将半径、纬度和经度投影到笛卡尔x和y中的公式。当然，我只能绘制经纬网，直到某天我得到了 一个公共领域的地理坐标数据库(起初，我的PC-XT电脑花了一个多小时来绘制一张 粗略的地图)。
   
