--- a/pages/地图投影介绍.md
+++ b/pages/地图投影介绍.md
@@ -49,7 +49,7 @@ public:: true
 		- ![image.png](../assets/image_1623304140149_0.png) [[圆锥投影]]
 		- ![image.png](../assets/image_1623304165098_0.png) [[伪圆锥投影]]
 		- ![image.png](../assets/image_1623304176832_0.png) [[修正方位投影]]
-		- ![image.png](../assets/image_1623304189330_0.png){:height 48, :width 80} [[共形投影]]
+		- ![image.png](../assets/image_1623304189330_0.png){:height 48, :width 80} [[正形投影]]
 		- ![image.png](../assets/image_1623304216224_0.png) [[其他有趣的投影]]
 	- 应对变形:
 		- ![image.png](../assets/image_1623304230803_0.png){:height 48, :width 80} [[倾斜和弯曲投影:斜轴投影]]
