--- a/pages/正形投影.md
+++ b/pages/正形投影.md
@@ -45,4 +45,79 @@ Alias:: 等角投影
   * 重建拉格朗日的欧洲地图，将其参数化，以减少柏林附近的比例尺变化率：南纬18°30'的直线，系数1.17，中央经线在柏林。
   * 直线赤道和系数2/3的地图，其中一个半半球以圆为界。
 # Eisenlohr 和 August 的正形投影
--
+- 避免奇异点是德国的两个表面上非常相似的设计的一个必要条件。两者都是为赤道投影面开发的；赤道和中央子午线是直线，而两极是突出的尖顶。在边界经线附近，面积失真很明显，但独特的是，这两个投影在每一个点上都是保形的，甚至是两极。
+- Friedrich Eisenlohr在1870年发表的设计有两个额外的特点：沿着边界经线的比例是恒定的；更值得注意的是，比例范围是所有保形投影中最窄的，$$1:3+\sqrt{8}$$--与三个经典投影的$$1:\infty$$范围相比。相对复杂的计算最初限制了它的使用，甚至今天它也很少被采用。
+- 由Friedrich August设计、Bellermann共同开发的投影于1874年出版，作为Eisenlohr设计的替代方案：比例尺失真范围更广（1：8），在边界经线上也不恒定，但其构造略为简单。世界地图的边界是一个环状线，这个形状是由一个圆上的一个点在另一个固定的圆上滚动而定义的。
+- 艾森洛尔和奥古斯特的投影都不应该与类似的设计相混淆，如广义的 "拉格朗日 "和非共形的美国多圆锥、矩形多圆锥和范德格林顿 IV投影。
+	- ![image.png](../assets/image_1625321134466_0.png) 
+	  Eisenlohr's conformal map
+	- ![image.png](../assets/image_1625321148130_0.png) 
+	  August's epicycloidal conformal map
+# 正方形的正形投影
+- 随着复数分析的成熟,等角投影现在的通用技术是把平面上的点作为复数平面上的数字来处理。特别是三位著名制图师开发了适用于各种投影面的在正方形上的正形投影的半球地图（经过适当重排后可以应用于整个世界），三种方法都要求计算第一类椭圆积分。
+## 皮尔斯的梅花投影
+- 在美国海岸和大地测量局工作时，美国哲学家和学者查尔斯·桑德斯·皮尔士在1879年公开了他的共形投影。在正常方面，它以正方形呈现北半球；另一个半球被分成围绕正方形对称的四个直角三角形，类似于星形投影。实际上，整个地图是一个更大的正方形，这启发了皮尔斯将他的投影称为梅花形，在十字中排列了五个。
+- ![image.png](../assets/image_1625324175656_0.png) 
+  正方形的皮尔斯梅花投影
+- 除了内半球的角落--也就是整张地图的边缘中点--赤道突然中断外，Peirce的投影在任何地方都是保角的。在这四点附近，比例尺被高度拉伸；反之，极地地区则相当压缩。赤道和四条经线是笔直但断裂的线；所有其他格线是复杂的曲线。
+- 五角形地图的八个三角形显然可以被重新安排成一个矩形，或者以南极的方式。另外，地图对平面进行了镶嵌；也就是说，通过一个微不足道的旋转，重复的副本可以完全覆盖（即镶嵌）一个任意的区域，每个副本的特征与相邻的副本完全匹配。然而，奇异点附近的点在镶嵌图上出现了两次；由于Peirce所选择的投影面，它们都落在海面上，所以几乎不引人注目。
+	- ![image.png](../assets/image_1625324275091_0.png) 
+	  平铺的Peirce Quincuncial地图。你能挑选出正常的正方形、南极的正方形以及八个三角形的几种可能排列吗？你能挑选出奇点吗？
+	- ![image.png](../assets/image_1625324368254_0.png) 
+	  赤道投影面的Peirce投影
+## Guyou的正形投影
+- 仅仅在Peirce之后几年，法国的Émile Guyou提出了他的保形投影（1886-1887）。在其最初的形式中，它包括西半球和东半球，每个半球都是一个正方形；赤道和四条经线是直线，其中两条后来沿着正方形的边缘断开。其他经线和纬线是复杂的曲线。
+- 同样，在每个正方形的角落，即平行线45°N/S与直线子午线相交的地方，有很大范围的比例失真，而且没有等角性。
+- 实际上，Peirce的投影和Guyou的投影是彼此的横向情况，分别强调极地和赤道投影。通过简单的旋转，Guyou地图的相同副本也可以在平面上铺设。
+	- ![image.png](../assets/image_1625324486648_0.png) 
+	  经典的Guyou地图，中央经线20°E，两极位于半球边缘的中点
+	- ![image.png](../assets/image_1625324509017_0.png) 
+	  倾斜投影面的Guyou地图，极点位于方形顶点，或两个Adams半球；中央经线25°W
+	- ![image.png](../assets/image_1625324554354_0.png) 
+	  另一个斜轴投影的Guyou地图,最大限度地减少了大陆的中断（不幸的是，像日本、伊比利亚和新西兰这样人口稠密的地区被中断或靠近较大区域扭曲的角落）。
+	- ![image.png](../assets/image_1625324609762_0.png) 
+	  平铺的Guyou投影
+## O.S.Adams的方形半球
+- 然而，正方形主题的另一个发展是旋转90度，即把两极放在正方形的两个角上。Oscar S. Adams，也是美国海岸和大地测量局的多产成员，于1925年提出了他的两个正方形半球的保形世界地图。
+- 与Peirce和Guyou的其他方面完全一样，在正方形的四角，即保角失败的地方，比例尺失真很严重。只有赤道和中央子午线是直线；边界子午线也是直线，但在赤道处断开。
+- 尽管由于其数学发展而引起兴趣，但Peirce、Guyou和Adams的正方形等角投影很少被使用。
+# 其他形状的等角世界地图
+## 新的复数工具
+- 等角投影的进一步发展依赖于复数分析的发展
+	- 黎曼的共形映射定理（1851年），该定理指出了在两个相连的平面区域之间进行共形转换的必要条件，但并没有描述如何实现这种映射
+	- 赫尔曼-A-施瓦茨在复平面上将一个半径为1的圆（称为单位盘）映射到任何规则多边形的积分
+	- Schwarz-Christoffel变换，是由Elwin B. Christoffel在1867年和Schwarz在1869年独立证明的另一个复数积分；它表达了如何在半个平面（或单位盘）和任何简单连接（即不自相交）的多边形之间进行映射。
+- 尽管Schwarz和Christoffel的作品实现了对黎曼定理的建设性证明，但他们在制图方面的应用（除了简单的、特殊的例子）在近一个世纪里仍然是不切实际的；对于大多数情况，他们没有得出封闭的公式，需要解决一个非线性方程系统。实际制图涉及到通过连续的近似来进行冗长的数字评估。
+- 即使在数字计算机普遍可用之后，结果也远非统一。许多Schwarz-Christoffel映射的算法都存在效率低下、精度有限、不稳定等问题，即不能收敛到一个结果，或者对奇异点（通常存在于多边形顶点）处理不力。
+## O.S.Adams的世界地图
+- 在提出了他的方形等角半球后，Oscar S.Adams提出了两个投影，世界地图在一个方形中。
+- 第一个版本（1929年）的极点在相对的角落里；每个角落的比例失真都很严重，缺乏保形性。第二个版本（1936年）的极点在相对的边缘的中点；同样，在顶点有强烈的比例失真。这种投影在每个角和边缘中点处都不符合保形。
+- 亚当斯的其他不太知名的保角投影是基于一个椭圆和其他几个多边形。
+	- ![image.png](../assets/image_1625324753626_0.png) 
+	  1929年版O.S.Adams's的等角正方形世界地图
+	- ![image.png](../assets/image_1625325121036_0.png) 
+	  1936年版O.S.Adams's的等角正方形世界地图
+## Lee等角投影
+- 劳伦斯-P-李（Laurence P. Lee），杰出的制图师和新西兰国家测绘机构的高级官员，进一步概括并改进了任意保形制图的方法的准确性。他的投影包括在矩形、椭圆、等边三角形、正四面体（1965）和其他正多面体（1976）上的世界地图。
+- 与亚当斯一样，李的设计吸引了学术界的兴趣，并为新的数学成就铺平了道路，但在普通地图中的应用有限。
+# 新的正形投影地图
+- 来自希腊的Constant Xarax受到Lee在多边形和多面体上的保形地图、Briesemeister的斜投影和蝴蝶式排列的多面体地图的影响，提出了一个半正六边形的世界保形地图（2004）。从本质上讲，李的四面体保形投影是按原来的南极投影面绘制的，然后分成三个裂片，围绕北极重新排列；其结果是平衡了可读性、低中断数和容易识别的形状。与最初的设计一样，保形性在北极和地图边缘三条直线经线断裂的四个点上失效。
+- ![image.png](../assets/image_1625325200228_0.png)
+  Xarax的世界地图是正六边形的一半。在Xarax之后重新绘制。
+- Edgar N. Gilbert（约1970年）使用Lambert压缩赤道方位立体图的方法，该方法是 "Lagrange "投影的起源，他缩小了球体本身的经度，乘数为0.5，然后移动纬度以恢复符合性。整个地球被重新映射成一个半球，在最终的 "地图 "上可以复制。吉尔伯特至少有一个这种 "双球体 "的实际组装实例，地球上的每个点都被代表了两次。除了两极之外，整个球体都是保真的。
+- 与Raisz的正交投影有点类似，Alan DeLucia和John Snyder对Gilbert的 "两个世界 "球体进行了正交转换（1986年），创造了一个以5°N 5°E为中心的平面地图。作为典型的正视图，地图的东部和西部边界被大大压缩；北冰洋的一个薄片出现了两次，而南极洲的一个相应片断被省略了。从视觉上看，其结果类似于拉格朗日和范德格林顿投影的球状外观，极地区域的夸张让人想起墨卡托地图。像其他的球体经纬网一样，网格由椭圆弧组成，地图既不是保形的也不是等面积的。
+## 吉尔伯特的双重世界投影的各种正视图
+- ![image.png](../assets/image_1625325490917_0.png) 
+  赤道投影面可以呈现整个世界
+- ![image.png](../assets/image_1625325520264_0.png) 
+  倾斜投影面展示了地球上的每个点是如何被复制的。
+- ![image.png](../assets/image_1625325565962_0.png) 
+  如南极投影面所示,两个极点没有等角性质
+- ![image.png](../assets/image_1625325609482_0.png) 
+  DeLucia/Snyder的轻微倾斜的投影面
+- 吉尔伯特投影显示在半球上时,在球面上是保形的，在平面地图上不是保形的
+## 这个地球仪有什么问题--说真的？
+- ![image.png](../assets/image_1625325878040_0.png) ![image.png](../assets/image_1625325892815_0.png) 
+  “双地球仪”，子午线间距减半(表面上类似于吉尔伯特，但没有共形校正):图一，托布勒提出的正交正轴投影；图二，倾斜正交视图。
+- 在《科学美国人》杂志的数学游戏专栏中，马丁-加德纳引用吉尔伯特的话说，很少有人注意到他办公室里的重复地球仪有什么奇怪的地方。制图师Waldo Tobler在一篇关于不寻常地图的轻松演讲中提出，几乎没有人反对地球的赤道正交面只有简单的子午线压缩而没有保形校正。
+- 这种无视的提法是否反映了某种忽视地理细节的先天倾向、对地球仪的普遍不熟悉，或者只是作者的面子问题？2015年，吉尔伯特的实验被艺术家大卫-斯沃特用他自己的[双球体](http://gallery.bridgesmathart.org/exhibitions/2015-bridges-conference/dmswartrt)进行了实验，结果类似。
