--- a/pages/其他有趣的投影.md
+++ b/pages/其他有趣的投影.md
@@ -66,5 +66,34 @@ public:: true
   扩展到世界地图
 - ![image.png](../assets/image_1625370227413_0.png) 
   横轴的世界地图
-# 托布勒投影
--
+# 为大比例尺设计的托布勒投影
+- 有时，简化一个现有的投影实际上可能会增强其有用性，或者至少使其更容易使用。这是Waldo Tobler在寻找一种适合在计算机屏幕上有效呈现美国密歇根州等小区域的投影后得出的结论（1974）。必要条件是快速计算、形状和面积的合理保真度、容易计算的失真、简单的参数化以及精确和容易计算的逆向方程，以便快速地将屏幕和世界坐标联系起来。
+- 在研究了几种保角和等面积的方法后，Tobler教授决定采用Tissot（1881）以前的投影，既不是保角也不是等面积的，也是为局部地图设计的。Tissot的投影是由一个幂级数定义的，但Tobler只保留了线性项，这可以直接推到逆方程。该投影由一个参考纬度设定参数，这也有助于优化失真。以赤道为中心的横轴投影与Plate Carrée相同。
+- 虽然托布勒从未打算将他的地方地图投影用于世界地图，但这是一个有趣的练习，展示了其失真度如何随参考纬度而变化。
+	- ![image.png](../assets/image_1625370481273_0.png) 
+	  改变参考纬线（上述30°N）
+	- ![image.png](../assets/image_1625370546453_0.png) $$90^{\circ}N$$
+	- ![image.png](../assets/image_1625370607167_0.png) $$75^{\circ}N$$
+	- ![image.png](../assets/image_1625370618905_0.png) $$60^{\circ}N$$
+	- ![image.png](../assets/image_1625370725176_0.png) $$45^{\circ}N$$
+	- ![image.png](../assets/image_1625370755098_0.png) $$30^{\circ}N$$
+	- ![image.png](../assets/image_1625370784312_0.png) $$15^{\circ}N$$
+	- ![image.png](../assets/image_1625370816748_0.png)$$0^{\circ}N$$
+	- ![image.png](../assets/image_1625370841850_0.png)$$15^{\circ}S$$
+	- ![image.png](../assets/image_1625370869212_0.png)$$30^{\circ}S$$
+	- ![image.png](../assets/image_1625370885247_0.png)$$45^{\circ}S$$
+	- ![image.png](../assets/image_1625370904558_0.png)$$60^{\circ}N$$
+	- ![image.png](../assets/image_1625370922007_0.png)$$75^{\circ}N$$
+	- ![image.png](../assets/image_1625370940119_0.png)$$90^{\circ}S$$
+# Gringorten 投影
+- 在寻找适合全球气候分析的地图投影后，气候学家Irving I.Gringorten在1972年发表了一个非常独特的设计，今天几乎被遗忘。
+- 他要求世界地图必须是方形的，以便有效地利用报告、文章和书籍中的印刷空间；它应该是等面积的，例如，气象探测器和站点的密度和分布可以一目了然；它还应该避免过度的形状失真；最后，应该尽量减少大陆的中断。
+- Gringorten投影的细节是为球形地球的极地投影面设计的，一个以极点为中心的半球在一个内部的正方形上，而另一个半球被分成四个直角三角形，其极点在四个角上重复。除了中断，两个半球都是完全对称的，这种安排类似于皮尔斯的五角星地图。
+  每个半球包括四个三角形象限，其顶点在一个极点上，围绕中央子午线对称。在每个象限内，平行线是椭圆弧线，在赤道上是直的，向极点凹陷。在象限边界，平行弧以一阶连续方式连接。鉴于这些限制，有一个以上的等面积子午线位置的解决方案，不幸的是，没有一个能满足另一个理想的属性：子午线以直角穿过赤道，因此在各半球没有中断。
+- Gringorten的投影所要求的数学运算相当复杂，必须通过数字近似来计算。Gringorten的论文包括一个计算坐标表和一张北极地图，其中南叶以经线20°W、70°E、160°E和110°W为界。地图上有一个由100个编号单元组成的网格，建议作为普通经/纬度坐标系统之外的快速定位的辅助工具。南极洲被打断了，但这一不便可以通过插页、通过交换半球的第二张地图、或通过将三个网格单元从角落移到极点周围来缓解。
+- 作者还提出了其他的变化，如斜面和子午线位置的替代方案。另一个直接的修改是重新安排象限的布局，类似于Peirce和Guyou的地图：例如，将每个半球设置在一个完整的正方形中。
+- ![image.png](../assets/image_1625371583049_0.png) 
+  ![image.png](../assets/image_1625371588459_0.png) ![image.png](../assets/image_1625371593470_0.png)
+- Gringorten的方形地图的重建，在正轴（顶部）和横轴（左上方）投影面有一个叠加的10x10经纬网。右上，有替代的经线位置。下图是重新安排的象限，给每个半球一个完整的正方形。
+- ![image.png](../assets/image_1625371660497_0.png)
+- ![image.png](../assets/image_1625371666247_0.png)
