--- a/pages/其他有趣的投影.md
+++ b/pages/其他有趣的投影.md
@@ -1,6 +1,6 @@
 public:: true
 上一页:: [[正形投影]]
-下一页:: [[倾斜和弯曲投影:斜轴投影]]
+下一页:: [[倾斜和弯曲投影_斜轴投影]]
 原文链接:: [Other Interesting Projections](https://web.archive.org/web/20180628080106/http://progonos.com/furuti/MapProj/Normal/ProjOth/projOth.html)
 
 - 在几个世纪的地图制作中，无数的投影被设计出来。许多设计不能很容易地分成几大类(方位、圆柱、伪圆柱、圆锥或伪圆锥)，即使它们的设计是相似的或衍生的。
