--- a/pages/地图投影介绍.md
+++ b/pages/地图投影介绍.md
@@ -52,8 +52,8 @@ public:: true
 		- ![image.png](../assets/image_1623304189330_0.png){:height 48, :width 80} [[正形投影]]
 		- ![image.png](../assets/image_1623304216224_0.png) [[其他有趣的投影]]
 	- 应对变形:
-		- ![image.png](../assets/image_1623304230803_0.png){:height 48, :width 80} [[倾斜和弯曲投影:斜轴投影]]
-		- ![image.png](../assets/image_1623304280416_0.png) [[撕开地球的皮肤:分瓣投影]]
+		- ![image.png](../assets/image_1623304230803_0.png) [[倾斜和弯曲投影_斜轴投影]]
+		- ![image.png](../assets/image_1623304280416_0.png) [[撕开地球的皮肤_分瓣投影]]
 			- [[分瓣投影介绍]]
 			- [[星形投影]]
 			- [[分瓣和复合圆锥投影]]
