--- a/pages/地图投影介绍.md
+++ b/pages/地图投影介绍.md
@@ -59,7 +59,7 @@ public:: true
 			- [[经典分瓣投影]]
 			- [[任意分瓣投影]]
 			- [[分瓣技巧]]
-		- ![image.png](../assets/image_1623304271058_0.png) [[将地球改造成奇异行星:多面体地图]]
+		- ![image.png](../assets/image_1623304271058_0.png) 将地球改造成奇异行星:[[多面体地图]]
 			- [[多面体地图介绍和四面体地图]]
 			- [[立方体和八面体地图]]
 			- [[二十面体/十二面体/其他地图]]
