--- a/pages/分瓣技巧.md
+++ b/pages/分瓣技巧.md
@@ -17,4 +17,21 @@ public:: true
 - 以经线0°为中心    以137°E为中心的经线   以日本为中心
 - 这三张区域地图使用相同的埃克特四号投影显示日本岛屿。对这种投影的角度变形模式的分析表明，尽管它到处都保留了面积，但只有中央子午线和标准平行线40°30′N和S（在赤道方面）交汇处的两个小 "甜蜜点 "不存在角度变形。这三张地图涵盖了相同的区域，但略有不同，在第二个版本中，该区域更接近最佳点--东京位于35°N 139°E附近。第三张地图上的斜向版本实际上更加失真，同时失去了赤道的直线平行的有用属性。
 # 压缩和镶嵌
--
+- 一些制图设备实际上是编辑技巧，目的是为了清晰或打印方便。它们不影响失真模式，可以纯粹用作布局工具。
+- 经常与分瓣同时应用，压缩地图意味着移除不重要的区域并连接剩余的部分。它可以节省出版空间，或者相反，在同一印刷区域允许更大的规模和更好的细节。
+- 插图也是一种编辑工具，是一种脱离或叠加在主地图上的小插图，很有用。
+  * 用于呈现一个被主投影严重扭曲、中断或无法显示(如墨卡托投影)的区域；方位等距通常用于极区
+  * 特别是对于小的或不太为人知的区域的大比例地图，用于快速确定其在地球上的位置；方位正投影经常用于小半球
+- ![image.png](../assets/image_1625406968429_0.png) 
+  上图，使用埃克特四号投影绘制的地图，由于经线重新居中而被打断，在大西洋被浓缩。南极洲不间断地呈现在一幅插图中，插图是用兰伯特的等面积方位投影以相同的比例绘制的。
+- ![image.png](../assets/image_1625407021528_0.png)
+- 埃克特投影不是插图的最佳选择:在横向投影面，有强烈的角度扭曲(右)；在将南极移动到标准纬线的倾斜投影面，失真减少了，但也不太对称(最右边的细节)。
+- ![image.png](../assets/image_1625407058772_0.png)
+- 巴西和它的近邻，在主墨卡托地图和插图(阴影)中。
+# 分瓣的滥用
+- 像一些制图技术一样，分瓣也可能被误用或被认为是纯粹的编辑便利。匆忙或粗心准备的地图可能存在以下问题。
+  * 没有明确标出压缩的区域
+  * 没有标出中断的空隙，反而暗示了连续性
+- 这样的地图对于广告来说可能足够好，但对于教学或科学目的来说是不可接受的。
+- ![image.png](../assets/image_1625407164883_0.png) 
+  分瓣的埃克特IV地图，没有压缩，但分瓣的颜色像额外的海域；部分网格和去除南极洲有助于隐藏缺陷。虽然大陆形状比由圆柱形投影制作的矩形地图呈现得更好，但陆地/水域面积比率具有误导性，冰岛和格陵兰岛或西伯利亚和阿拉斯加之间的距离被大大拉长。
