--- a/pages/地图投影介绍.md
+++ b/pages/地图投影介绍.md
@@ -59,17 +59,17 @@ public:: true
 			- [[经典分瓣投影]]
 			- [[任意分瓣投影]]
 			- [[分瓣技巧]]
-		- ![image.png](../assets/image_1623304271058_0.png) 将地球改造成奇异行星:[[多面体地图]]
+		- ![image.png](../assets/image_1623304271058_0.png) 将地球改造成奇异行星:
 			- [[多面体地图介绍和四面体地图]]
 			- [[立方体和八面体地图]]
 			- [[二十面体/十二面体/其他地图]]
 			- [[用于打印和折叠的地图]]
-	- [[史海钩沉]]
+	- 史海钩沉
 		- ![image.png](../assets/image_1623304364099_0.png) [[在现代之前发展的投影]]
-	- [[工作中用到的投影]]
-		- ![image.png](../assets/image_1623304308920_0.png)[[缩小世界的投影:墨卡托投影和等距离方位投影]]
-		- ![image.png](../assets/image_1623304319331_0.png) [[地图投影的一些特殊应用（在建筑中）]]
-	- [[总结]]
+	- 投影（施工中）
+		- ![image.png](../assets/image_1623304308920_0.png)缩小世界的投影: [[墨卡托投影和等距离方位投影]]
+		- ![image.png](../assets/image_1623304319331_0.png) [[一些非正常的投影]]（建设中）
+	- 总结
 		- ![image.png](../assets/image_1623304341783_0.png) [[投影摘要和表格]]
 		- ![image.png](../assets/image_1623304353902_0.png) [[资源和链接]]
 		- [[FAQ]]
