--- a/pages/多面体地图.md
+++ b/pages/多面体地图.md
@@ -1,6 +1,7 @@
 public:: true
-上一页:: [[分瓣技巧]] 
-下一页:: [[多面体地图介绍和四面体地图]]
+上一页:: [[分瓣技巧]]
+下一页:: [[立方体和八面体地图]]
+Alias:: 多面体地图介绍和四面体地图
 原文链接:: [Polyhedral Maps](https://web.archive.org/web/20180629150710/http://progonos.com/furuti/MapProj/Normal/ProjPoly/projPoly.html)
 
 # 介绍
@@ -40,9 +41,9 @@ public:: true
 - Fisher的方法，基于Lambert的方位角等面积投影，被John P. Snyder（1992）概括为所有柏拉图实体，加上近乎精确的截断二十面体。它更容易解释，在不损失一般性的情况下，以一个规则的多边形面为中心的极性方面，半径延伸到每个顶点。兰伯特地图的 "自然 "边界是弯曲的，不是缺少就是超过多边形。因此，经线被调整，直到所有的经线都在边缘结束；这打破了面积等值，所以方位角，即经线间距，被修改以进行补偿。最后，沿每个子午线按比例计算距离，以保持面积不变。
 - 这种方法的缺点是沿着连接顶点和每个面中心的线引入了尖点--方向的变化，作为光栅尺的断点可见；相对而言，面越大，尖点就越明显。
 - 其他等面积的解决方案已经被提出，用于特定的立体，如四边形的球面立方体和立方体形式的HEALPix投影。
-## 四面体分瓣
+## 四面体分瓣投影
 - 四面体一般被认为不适合绘图，因为它在顶点附近有夸张的变形。Botley使用了gnomonic投影（1949）。Woolgar（1833）以前的设计是基于立体投影的，并不完全是多面体，因为面的边缘有重叠。
-- 为了回应他所认为的Fisher对（可能是日晷的）四面体地图的过度扭曲的批评，L.P.Lee创造了一个保形设计（1965）；与其他展开的多面体相比，他指出，缝隙的数量少，在适当的安排下，大陆的切割数量减少，而且有可能对平面进行镶嵌。除了四面体顶点（这六个奇点对应于扁平化形式中的角和边的中间），投影在任何地方都是保角的，这也显示出相当大的面积夸张。李将他的地图安排在南极方面，将所有顶点放在海洋地区。
+- 为了回应他所认为的Fisher对（可能是日晷的）四面体地图的过度扭曲的批评，L.P.Lee创造了一个正形设计（1965）；与其他展开的多面体相比，他指出，缝隙的数量少，在适当的安排下，大陆的切割数量减少，而且有可能对平面进行镶嵌。除了四面体顶点（这六个奇异点对应于扁平化形式中的角和边的中间），投影在任何地方都是等角的，这也显示出相当大的面积夸张。李将他的地图投影点放在南极，将所有顶点放在海洋地区。
 - 贝格豪斯的星形地图的3点变体可以顺便折叠成四面体，尽管其发展与上述任何方法都无关。
 - 尽管名字很普通，但巴塞洛缪的四面体投影实际上是一种星状的复合体，与多面体无关。
 - M.C.埃舍尔在他充满幻想的雕刻作品《双行星》（1949）和《四面体行星》（1954）中使用了真正的四面体假世界的概念。多面体、倾斜、循环、无限和矛盾的数字是这位多产的荷兰艺术家作品中反复出现的主题。四面体 "地球 "为《以赛亚书》11:12（"他要把分散的犹大人从地球的四面八方聚集起来"）提出了新的含义。
